--- a/index.html
+++ b/index.html
@@ -263,7 +263,7 @@
         <div class="dork-card">
             <h2 class="section-title">QUICK DORK GENERATION</h2>
             
-            <input type="text" id="domain-input" class="input-field" placeholder="Enter domain (e.g., example.com)" value="pisa.org.pk">
+            <input type="text" id="domain-input" class="input-field" placeholder="Enter domain (e.g., example.com)">
             
             <div class="people-search-inputs">
                 <div class="input-group">
