--- a/index.html
+++ b/index.html
@@ -896,7 +896,7 @@
                                 </div>
                             </div>
                             <div class="dev-title">
-                                <h3>NeXus</h3>
+                                <h3>VaRieN</h3>
                                 <div class="dev-role">Founder & Lead Security Researcher</div>
                             </div>
                         </div>
@@ -945,7 +945,7 @@
                                 </div>
                             </div>
                             <div class="dev-title">
-                                <h3>Cipher</h3>
+                                <h3>Str1k3r</h3>
                                 <div class="dev-role">Co-Author & Security Engineer</div>
                             </div>
                         </div>
@@ -969,7 +969,7 @@
                         </div>
                         
                         <div class="social-links">
-                            <a href="#" class="social-link"><i class="fab fa-github"></i></a>
+                            <a href="https://github.com/str1k3r0p" class="social-link"><i class="fab fa-github"></i></a>
                             <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
                             <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
                             <a href="#" class="social-link"><i class="fas fa-book"></i></a>
