--- a/index.html
+++ b/index.html
@@ -920,7 +920,7 @@
                         </div>
                         
                         <div class="social-links">
-                            <a href="#" class="social-link"><i class="fab fa-github"></i></a>
+                            <a href="#https://github.com/variendarkgirl" class="social-link"><i class="fab fa-github"></i></a>
                             <a href="#" class="social-link"><i class="fab fa-twitter"></i></a>
                             <a href="#" class="social-link"><i class="fab fa-linkedin"></i></a>
                             <a href="#" class="social-link"><i class="fas fa-globe"></i></a>
